--- a/story.html
+++ b/story.html
@@ -89,14 +89,15 @@
         Even though it's a small sample size and it is spring training, Soto has already given Mets fans something to be excited for. He hit a home run in his first at-bat, and then on Friday against the Nationals, he hit another right after bobbing his head the pitch before.
     </p>
 
+    <div class = "Sotohomer">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/CNUWwj0obfY?si=_Pqpx0R_LUHCF-06" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+    </div>
     <p>
         Juan Soto will give the Mets and their fans something they haven't seen. Whether it's the elite plate discipline, slugging power, ability to perform in the clutch or just overall aura he brings, he makes the Mets a much better baseball team.
     </p>
 
     <p>
-        At 26, Soto is only entering the prime of his career and he's slated to get better. On a true World Series contender, he has the opportunity to win multiple championships and bring hope to a franchise that has not won a World Series since 1986.
+      Soto is only entering the prime of his career and he's slated to get better. On a true World Series contender, he has the opportunity to win multiple championships and bring hope to a franchise that has not won a World Series since 1986.
     </p>
 
     <p>
