--- a/favorites.html
+++ b/favorites.html
@@ -39,7 +39,7 @@
            </section>
 
         </div>
-
+<!-- Reel, with examples from every publication-->
     <h3> Blue Line Station:</h3>
     <p>  <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time" target="_blank"> NY Rangers 2023-24 Post Mortem</a> </p>
     <p>  <a href = "https://bluelinestation.com/with-a-10-game-point-streak-the-new-york-rangers-have-made-the-homestretch-worth-watching-01jjmk7yygd4" target="_blank"> Home-stretch preview</a> </p>
