--- a/recent.html
+++ b/recent.html
@@ -28,7 +28,7 @@
 <h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/" target="_blank"> <img src ="azbanner.png"
     width = 75% > </a></h3>
 </div>
-
+<!-- Image banners for personal channels-->
     <h1> I also have two personal channels. One I run by myself, and the other with two Northwestern graduate students:</h1>
     <h3> <a href  = "https://www.youtube.com/@mozarskymemos" target="_blank"> <img src ="Memo2Banner.png"
         width = 75% > </a> </h3>
